fix spacing and overflow within messages

--- a/app/ui/loggedIn/messagesComponents/message/message.module.css
+++ b/app/ui/loggedIn/messagesComponents/message/message.module.css
@@ -3,7 +3,9 @@
     max-width: 40%;
     height: auto;
     border-radius: 20px;
-    color: var(--text)
+    color: var(--text);
+    padding: 0px 10px;
+    overflow-wrap: break-word;
 }
 
 .primarybg {
